--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"server"
+    
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "mysql2": "^3.2.3",
+    "nodemon": "^2.0.22",
     "otp-generator": "^4.0.1"
   }
 }
